# flake-templates

./: .gitignore  flake.nix
templates/arxiv/: default.nix  flake.nix
templates/arxiv/src/: glossary.tex  top-level-wrap-test-quote.yaml
templates/basic/: flake.nix
templates/haskell/: Justfile  README.md  cabal.project  devenv.nix  flake.nix  rename-tool.nix  session.yaml
templates/haskell/renameme/: renameme.cabal
templates/haskell/renameme/app/: Main.hs
templates/haskell/renameme/test/: Main.hs
templates/haskell/scripts/: rename-project.sh
templates/latex/: .gitignore  00-main.tex  01-first-thing.tex  99-title.tex  default.nix  devenv.nix  flake.nix  preamble.tex
templates/latex/figures/: 04-equivalence-relation.tex  07-tree-zero.tex
templates/latex/figures/samples/: 01-composition.tex  02-isomorphism.tex  category.tex  monoid.tex
templates/latex/src/: 00-main.tex  defaultConfig.yaml  glossary.tex  preamble.tex
templates/latex/src/figures/samples/: 05-toset.tex  06-tree.tex  README.md  poset.tex
templates/lean/: .gitignore  Justfile  Main.lean  README.md  Renameme.lean  flake.nix  lake-manifest.json  lakefile.lean
templates/lean/scripts/: rename-project.sh
templates/python/: flake.nix
templates/python/.ipython/profile_default/: ipython_config.py
