cabal-version: 3.0
name:          renameme
version:       0.1.0.0
license:       MIT
build-type:    Simple

common shared
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions: NoStarIsType
  build-depends:
    , base
    , optparse-applicative

library
  import:          shared
  exposed-modules: Params
  hs-source-dirs:  src

executable exe
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  renameme

test-suite tests
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , renameme
    , tasty
    , tasty-hunit
    , tasty-quickcheck
